--- a/sbin/dmesg/Makefile
+++ b/sbin/dmesg/Makefile
@@ -1,10 +1,10 @@
-#	@(#)Makefile	5.6 (Berkeley) 5/2/91
+#	@(#)Makefile	8.1 (Berkeley) 6/5/93
 
 PROG=	dmesg
 MAN8=	dmesg.0
 BINGRP=	kmem
 BINMODE=2555
-LDADD=	-lutil
-DPADD=	${LIBUTIL}
+LDADD=	-lkvm
+DPADD=	${LIBKVM}
 
 .include <bsd.prog.mk>
