--- a/bin/sh/Makefile
+++ b/bin/sh/Makefile
@@ -1,16 +1,19 @@
-#	%W% (Berkeley) %G%
+#	@(#)Makefile	8.1 (Berkeley) 6/8/93
 
 PROG=	sh
-SRCS=	builtins.c cd.c dirent.c echo.c error.c eval.c exec.c expand.c \
-	input.c jobs.c mail.c main.c memalloc.c miscbltin.c \
-	mystring.c nodes.c options.c parser.c redir.c show.c signames.c \
-	syntax.c trap.c output.c var.c
-OBJS+=	init.o
+SRCS=	alias.c builtins.c cd.c echo.c error.c eval.c exec.c expand.c \
+	histedit.c input.c jobs.c mail.c main.c memalloc.c miscbltin.c \
+	mystring.c nodes.c options.c parser.c printf.c redir.c show.c \
+	signames.c syntax.c trap.c output.c var.c
+OBJS+=	init.o arith.o arith_lex.o
+LDADD=	-ll -ledit -ltermcap -lcompat
+LFLAGS= -8	# 8-bit lex scanner for arithmetic
 CFLAGS+=-DSHELL -I. -I${.CURDIR}
-.PATH:	${.CURDIR}/bltin
+.PATH:	${.CURDIR}/bltin ${.CURDIR}/../../usr.bin/printf
 CLEANFILES+=\
 	builtins.c builtins.h init.c mkinit mknodes mksignames mksyntax \
-	nodes.c nodes.h signames.c signames.h syntax.c syntax.h token.def
+	nodes.c nodes.h signames.c signames.h syntax.c syntax.h token.def \
+	y.tab.h
 
 .depend parser.o: token.def
 token.def: mktokens
