--- a/usr.sbin/arp/Makefile
+++ b/usr.sbin/arp/Makefile
@@ -1,10 +1,14 @@
-#	@(#)Makefile	5.3 (Berkeley) 5/11/90
+#	from: @(#)Makefile	8.2 (Berkeley) 4/18/94
+#	$Id: Makefile,v 1.1.1.2 1994/05/13 08:08:58 mycroft Exp $
 
 PROG=	arp
-BINGRP=	kmem
-BINMODE=2555
-DPADD=	${LIBUTIL}
-LDADD=	-lutil
 MAN8=	arp.0
+CLEANFILES=arp4.0
+
+all: ${PROG} arp4.0 ${MAN8}
+
+beforeinstall:
+	install -c -o ${MANOWN} -g ${MANGRP} -m ${MANMODE} arp4.0 \
+	    ${DESTDIR}${MANDIR}4/arp.0
 
 .include <bsd.prog.mk>
