lpr from 4.4-Lite

--- a/usr.sbin/lpr/lpd/Makefile
+++ b/usr.sbin/lpr/lpd/Makefile
@@ -1,11 +1,10 @@
-#	@(#)Makefile	5.4 (Berkeley) 10/26/90
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
 
 PROG=	lpd
 CFLAGS+=-I${.CURDIR}/../common_source
-LDADD=	-lutil
 MAN8=	lpd.0
 SRCS=	lpd.c printjob.c recvjob.c displayq.c rmjob.c startdaemon.c \
-	lpdchar.c common.c printcap.c
+	lpdchar.c common.c
 .PATH:	${.CURDIR}/../common_source
 
 .include "../../Makefile.inc"
