--- a/usr.sbin/lpr/pac/Makefile
+++ b/usr.sbin/lpr/pac/Makefile
@@ -1,9 +1,9 @@
-#	@(#)Makefile	5.1 (Berkeley) 5/11/90
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
 
 PROG=	pac
 CFLAGS+=-I${.CURDIR}/../common_source
 MAN8=	pac.0
-SRCS=	pac.c printcap.c
+SRCS=	pac.c common.c
 .PATH:	${.CURDIR}/../common_source
 
 .include "../../Makefile.inc"
