--- a/usr.sbin/lpr/lpq/Makefile
+++ b/usr.sbin/lpr/lpq/Makefile
@@ -1,8 +1,8 @@
-#	@(#)Makefile	5.3 (Berkeley) 6/19/90
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
 
 PROG=	lpq
 CFLAGS+=-I${.CURDIR}/../common_source
-SRCS=	lpq.c displayq.c common.c printcap.c
+SRCS=	lpq.c displayq.c common.c
 BINOWN=	root
 BINGRP=	daemon
 BINMODE=6555
